--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,29 @@
     "import random\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numpy version 1.26.2\n",
+      "pandas version 2.1.4\n",
+      "sklearn version 1.4.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Numpy version {np.__version__}\")\n",
+    "print(f\"pandas version {pd.__version__}\")\n",
+    "print(f\"sklearn version {sklearn.__version__}\")"
    ]
   },
   {
